# slateVault

./: .gitignore  FEATURE-INVENTORY.md  package-lock.json  package.json
docs/product/: auto-update-release-flow.md  implementation-plan.md  macos-installer.md  mcp-agent-workflows.md  milestone-a-build-plan.md  positioning-and-onboarding.md  roadmap.md  ux-structure-and-screen-plan.md  vault-structure.md  wireframe-specs-phase-1.md  wireframe-specs-phase-2.md
scripts/: build-macos-installer.sh  build-windows-installer.ps1  generate-updater-manifest.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/slatevault-core/: Cargo.toml
src-tauri/crates/slatevault-core/src/: ai.rs  config.rs  credentials.rs  document.rs  error.rs  lib.rs  local_config.rs  playbook.rs  pr.rs  project.rs  search.rs  template.rs  vault.rs  vault_local_config.rs
src-tauri/crates/slatevault-mcp/: Cargo.toml
src-tauri/crates/slatevault-mcp/src/: lib.rs  main.rs  server.rs  tools.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  mcp_manager.rs  terminal.rs
src-tauri/windows/: hooks.nsh
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppChromeBar.tsx  AppShell.tsx  Onboarding.tsx  StatusBar.tsx  WindowControls.tsx
src/components/agent/: AgentAccessView.tsx
src/components/ai/: AiChatPanel.tsx  AiMessageBubble.tsx
src/components/editor/: CodeMirrorEditor.tsx  EditorPane.tsx  FrontMatterBar.tsx
src/components/git/: BranchSelector.tsx  ChangesTab.tsx  DiffViewer.tsx  GitPanel.tsx  HistoryTab.tsx  PrTab.tsx  RemoteTab.tsx
src/components/health/: DocsHealthView.tsx
src/components/home/: VaultHome.tsx
src/components/icons/: GitIcons.tsx
src/components/preview/: MarkdownPreview.tsx  ProjectPdfExport.tsx
src/components/search/: SearchView.tsx
src/components/session/: StartSessionView.tsx
src/components/settings/: PlaybooksPanel.tsx  SettingsPanel.tsx  TemplatesPanel.tsx
src/components/shared/: CreateProjectForm.tsx  EmptyState.tsx  ProjectSettingsModal.tsx  ResizeHandle.tsx
src/components/sidebar/: FileTree.tsx  SearchBar.tsx  Sidebar.tsx  TreeNode.tsx
src/components/sync/: CompareDiffModal.tsx  SyncView.tsx
src/components/terminal/: TerminalPanel.tsx
src/components/vault/: VaultPicker.tsx
src/components/wiki/: WikiView.tsx
src/lib/: clipboard.ts  commands.ts  frontmatter.ts  mcpSetup.ts  onboardingPrefs.ts
src/stores/: appStore.ts  chatStore.ts  editorStore.ts  gitStore.ts  sessionStore.ts  uiStore.ts  vaultStore.ts
src/types/: index.ts
