[workspace]
members = [".", "crates/slatevault-core", "crates/slatevault-mcp"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
rusqlite = { version = "0.33", features = ["bundled", "modern_sqlite"] }
git2 = "0.20"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "6"
tokio = { version = "1", features = ["full"] }
slatevault-core = { path = "crates/slatevault-core" }

[package]
name = "slatevault-app"
version.workspace = true
edition.workspace = true
description = "slateVault - Local-first AI-native markdown vault"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json.workspace = true
serde.workspace = true
log.workspace = true
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
slatevault-core.workspace = true
toml.workspace = true
tokio.workspace = true
tauri-plugin-dialog = "2.6.0"
portable-pty = "0.9.0"
dirs = "6"
tauri-plugin-fs = "2.5.0"
base64 = "0.22.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
zip = "8.5.0"
