[package]
name = "slatevault-core"
version.workspace = true
edition.workspace = true
description = "Core library for slateVault — vault, project, document, git, and search operations"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
rusqlite.workspace = true
git2.workspace = true

[dev-dependencies]
tempfile = "3"
