[package]
name = "slatevault-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for slateVault — exposes vault operations as MCP tools"

[[bin]]
name = "slatevault-mcp"
path = "src/main.rs"

[dependencies]
slatevault-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
anyhow.workspace = true
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
toml.workspace = true
